--- a/src/sass/templates/_hero.sass
+++ b/src/sass/templates/_hero.sass
@@ -44,6 +44,7 @@
       border-radius: 50%
 
   &__content
+    overflow-x: hidden
     position: relative
     display: flex
     padding-left: rem(55px)
